# leanr

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  deny.toml  mathlib-pin  mise.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  nightly-sweep.yml  nightly-synth-sweep.yml
crates/leanr_build/: Cargo.toml
crates/leanr_build/examples/: cas_httpd.rs
crates/leanr_build/src/: bridge.rs  cache.rs  cache_dir.rs  compile.rs  config.rs  error.rs  fetch.rs  fingerprint.rs  fslock.rs  graph.rs  lib.rs  manifest.rs  modules.rs  pool.rs  remote.rs  scanner.rs  setup.rs  subprocess.rs  testws.rs
crates/leanr_build/tests/: cache_incremental.rs  cache_remote.rs  config_fixtures.rs  lake_build_oracle.rs  mathlib_oracle.rs  synthetic_workspace.rs
crates/leanr_build/tests/fixtures/: counting-lean.sh  fake-lake-big-stderr.sh  fake-lake-fail.sh  fake-lake-ok.sh  fake-lake-strict-out.sh  fake-lean.sh  mathlib-lakefile-golden.toml
crates/leanr_build/tests/fixtures/lakefiles/: importGraph.toml  plausible.toml
crates/leanr_build/tests/support/: httpd.rs
crates/leanr_check/: Cargo.toml
crates/leanr_check/src/: graph.rs  lib.rs  schedule.rs
crates/leanr_check/tests/: fixture.rs  graph_tests.rs  schedule_tests.rs
crates/leanr_cli/: Cargo.toml
crates/leanr_cli/src/: main.rs
crates/leanr_cli/tests/: build_cli.rs  cli.rs  fmt_cli.rs  parallel_differential.rs  parse_cmd.rs  parse_imports.rs
crates/leanr_elab/: Cargo.toml
crates/leanr_elab/src/: dispatch.rs  elab.rs  error.rs  lib.rs  resolve.rs
crates/leanr_elab/src/builtin/: ascription.rs  binder.rs  hole.rs  ident.rs  lit.rs  mod.rs  sort.rs
crates/leanr_elab/tests/: binder_smoke.rs  oracle_elab.rs
crates/leanr_elab/tests/support/: mod.rs
crates/leanr_fmt/: Cargo.toml
crates/leanr_fmt/src/: comments.rs  doc.rs  lib.rs  render.rs  trivia.rs  verify.rs
crates/leanr_fmt/src/rules/: imports.rs  mod.rs  spacing.rs
crates/leanr_fmt/tests/: fixtures_golden.rs  mathlib_corpus.rs
crates/leanr_fmt/tests/fixtures/: CommentBoundary.lean  Imports.expected  Imports.lean  ImportsWithBody.expected  ImportsWithBody.lean  Spacing.expected  Spacing.lean
crates/leanr_grammar/: Cargo.toml
crates/leanr_grammar/src/: alias.rs  assemble.rs  descr.rs  lib.rs
crates/leanr_grammar/tests/: import_golden.rs  mathlib_sweep.rs
crates/leanr_kernel/: Cargo.toml
crates/leanr_kernel/src/: checked.rs  decl.rs  env.rs  error.rs  expr.rs  guard.rs  inductive.rs  intern.rs  level.rs  lib.rs  local_ctx.rs  name.rs  num.rs  quot.rs  quot_red.rs  replay.rs  subst.rs  syntax.rs  tc.rs  testenv.rs  used_consts.rs
crates/leanr_kernel/src/bank/: decl.rs  env.rs  inductive.rs  levels.rs  local_ctx.rs  mod.rs  names.rs  pools.rs  probe.rs  quot.rs  quot_red.rs  replay.rs  scratch.rs  subst.rs  tc.rs  terms.rs  testgen.rs  tests.rs  used_consts.rs
crates/leanr_kernel/src/bank/env/: tests.rs
crates/leanr_kernel/src/bank/inductive/: tests.rs
crates/leanr_kernel/src/bank/quot/: tests.rs
crates/leanr_kernel/src/bank/replay/: tests.rs
crates/leanr_kernel/src/bank/tc/: tests.rs
crates/leanr_kernel/src/env/: resolve_tests.rs  tests.rs
crates/leanr_kernel/src/inductive/: tests.rs
crates/leanr_kernel/src/quot/: tests.rs
crates/leanr_kernel/src/replay/: tests.rs
crates/leanr_kernel/src/tc/: tests.rs  trace.rs
crates/leanr_kernel/tests/: env.rs  expr.rs  name.rs
crates/leanr_meta/: Cargo.toml
crates/leanr_meta/src/: assign.rs  cache.rs  config.rs  defeq.rs  discr_path.rs  discr_tree.rs  error.rs  infer.rs  instances.rs  lazy_delta.rs  level.rs  lib.rs  metactx.rs  mvar_ctx.rs  synth.rs  test_support.rs  transparency.rs  whnf.rs
crates/leanr_meta/tests/: oracle_fast.rs  oracle_synth.rs  synth_sweep.rs
crates/leanr_meta/tests/support/: mod.rs
crates/leanr_olean/: Cargo.toml
crates/leanr_olean/fuzz/: Cargo.toml
crates/leanr_olean/fuzz/corpus/module_data/: Sample.olean
crates/leanr_olean/fuzz/fuzz_targets/: module_data.rs
crates/leanr_olean/src/: interp.rs  interp_id.rs  lib.rs  loader.rs  module_data.rs  raw.rs
crates/leanr_olean/tests/: check_fixtures.rs  check_sweep.rs  dual_check.rs  header.rs  module_data.rs  parser_entries.rs  stdlib_sweep.rs
crates/leanr_query/: Cargo.toml
crates/leanr_query/src/: lib.rs
crates/leanr_query/tests/: engine_walks.rs
crates/leanr_syntax/: Cargo.toml
crates/leanr_syntax/fuzz/: Cargo.toml
crates/leanr_syntax/fuzz/corpus/parse_module/: AttrWide.lean  Errors0.lean  Micro.lean  MismatchedEnds.lean  NamespaceStorm.lean  NsScopedLocalStorm.lean  OpenForms.lean  OpenStorm.lean  QuotationIsolation.lean  StrayEndStorm.lean  StructMultiLine.lean  Types.lean  Unicode.lean
crates/leanr_syntax/fuzz/fuzz_targets/: parse_module.rs
crates/leanr_syntax/src/: canon.rs  grammar.rs  kind.rs  lex.rs  lib.rs  parse.rs  tree.rs
crates/leanr_syntax/tests/: lossless.rs  never_hang.rs  oracle_golden.rs
docs/: ORACLE.md  THREAT_MODEL.md
docs/superpowers/plans/: 2026-07-04-m0-foundations.md  2026-07-04-m1a-olean-decoder.md  2026-07-05-m1b-type-checker.md  2026-07-06-expr-hash-consing.md  2026-07-06-term-bank-foundation.md  2026-07-06-term-bank-kernel-migration.md  2026-07-09-nat-brecon-reduction-divergence.md  2026-07-10-direct-to-id-decode.md  2026-07-10-m1-final-parallel-mathlib.md  2026-07-11-m2a-package-model.md  (+18 more)
scripts/: bench-mathlib.sh  build-fresh-acceptance.sh  builtin-surface.sh  check-differential.sh  mathlib-fetch.sh  mem-watchdog.sh  nightly-sweep.sh  parse-acceptance.sh  remote-cache-acceptance.sh
tests/fixtures/: Instances.lean  Instances.olean  InstancesCyclic.lean  InstancesCyclic.olean  Matcher.lean  Matcher.olean  ModPriv.lean  ModPriv.olean  ModPriv.olean.private  ModPriv.olean.server  MutBase.lean  MutBase.olean  Mutations.olean  Mutations0.olean  Prelude0.lean  Prelude0.olean  Reducibility.lean  Reducibility.olean  Sample.decls.txt  Sample.lean  Sample.olean  SampleRich.decls.txt  SampleRich.lean  SampleRich.olean  dump_decls.lean  mutate.lean  mutations-verdicts.jsonl  mutations0-verdicts.jsonl  oracle-githash.txt
(+150 files in other folders)
