[package]
name = "leanr_build"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
blake3 = "1"
thiserror = "2"
ureq = "3.3.0"
zstd = "0.13.3"
rusty-s3 = "0.10.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
leanr_olean = { path = "../leanr_olean" }
leanr_kernel = { path = "../leanr_kernel" }
