[package]
name = "leanr_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "leanr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
leanr_kernel = { version = "0.1.0", path = "../leanr_kernel" }
leanr_olean = { version = "0.1.0", path = "../leanr_olean" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
