[package]
name = "leanr_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "leanr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
leanr_build = { version = "0.1.0", path = "../leanr_build" }
leanr_check = { version = "0.1.0", path = "../leanr_check" }
leanr_grammar = { version = "0.1.0", path = "../leanr_grammar" }
leanr_kernel = { version = "0.1.0", path = "../leanr_kernel" }
leanr_olean = { version = "0.1.0", path = "../leanr_olean" }
leanr_syntax = { version = "0.1.0", path = "../leanr_syntax" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
