[package]
name = "leanr_syntax-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.leanr_syntax]
path = ".."

[[bin]]
name = "parse_module"
path = "fuzz_targets/parse_module.rs"
test = false
doc = false
bench = false

[workspace]
